Prevent word wrap on mobile

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -49,7 +49,7 @@ body {
 .sitelink a:link,
 .sitelink a:visited {
   display: block;
-  width: 150px;
+  width: 160px;
   font-size: 14px;
   font-weight: bold;
   text-align: center;
@@ -78,7 +78,6 @@ h3 {
 h2 {
   font-size: 24px;
   color: #766c63;
-  ;
   font-family: 'PT Sans', sans-serif;
   padding: 0 0 4px 0;
 }
